feat(web): prepare for UI implementation
